tests/ui/traits/non_lifetime_binders/bad-bounds.stderr
error: bounds cannot be used in this context
  --> $DIR/bad-bounds.rs:6:24
   |
LL |   fn produce() -> for<A: A<{
   |  ________________________^
LL | |
LL | |
LL | |     #[derive(Hash)]
LL | |     enum A {}
LL | |     struct A<A>;
LL | | }>> Trait {}
   | |__^

error[E0405]: cannot find trait `Trait` in this scope
  --> $DIR/bad-bounds.rs:12:5
   |
LL | }>> Trait {}
   |     ^^^^^ not found in this scope

error: late-bound type parameter not allowed on trait object types
  --> $DIR/bad-bounds.rs:6:21
   |
LL | fn produce() -> for<A: A<{
   |                     ^

error[E0782]: expected a type, found a trait
  --> $DIR/bad-bounds.rs:6:17
   |
LL |   fn produce() -> for<A: A<{
   |  _________________^
LL | |
LL | |
LL | |     #[derive(Hash)]
LL | |     enum A {}
LL | |     struct A<A>;
LL | | }>> Trait {}
   | |_________^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0405, E0782.
For more information about an error, try `rustc --explain E0405`.
